--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -91,100 +91,282 @@
         }
     </style>
 
+<!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = '2f26b7f81308cb6fb12b8cbeb29e69d0dabfc51a';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+
 {% endblock %}
 
 {% block content %}
 <header>
     <div class="logo">
-        Dashlane Blog
+        <img src="https://resource-wangsu.helplook.net/docker_production/x89lto/nav_logo/site_logo?rand=1722559384">
     </div>        
 </header>
         
   <div class="container" style="background-color: #fefefe; padding: 1.5em; border: 1px solid #ccc; margin-bottom: 2em;">
- <h1>🔐 How to Log In to Dashlane: Step-by-Step Guide to Access and Manage Your Account Securely</h1>
 
-        <section>
-            <p>Managing your passwords efficiently is vital in today’s digital world. Dashlane is one of the most trusted password managers, offering users a secure and convenient way to store and access login credentials. If you’ve ever thought, <em>“How do I perform Dashlane log in my account?”</em> — this guide will walk you through every step to <strong>log in to Dashlane</strong> and keep your information protected.</p>
-        </section>
+    <h1>How to Download, Install, and Activate CCleaner Pro with License Key</h1>
 
-        <section>
-            <h2>🧭 Understanding the Dashlane Login Process</h2>
-            <p>Before you can <strong>sign into your Dashlane account</strong>, you need to know where to go. The <strong>Dashlane login page</strong> can be accessed via the web or the desktop and mobile apps. Whether you’re in the <strong>UK (Dashlane login UK)</strong> or anywhere else, the process remains the same.</p>
-            <p>To begin, visit <strong>dashlane.com login</strong> and choose the option to log in using your registered email and Master Password.</p>
-        </section>
+<p>
+CCleaner Pro is a popular system optimization tool designed to help users keep their computers clean, fast, and secure.
+While the free version offers basic cleaning features, CCleaner Pro unlocks advanced functionality such as real-time monitoring,
+automatic updates, scheduled cleaning, and priority customer support.
+</p>
 
-        <section>
-            <h2>👣 Step-by-Step: How to Log In to Dashlane</h2>
+    <br/>
+<center><a href="https://mystartpage.click/my-ccleaner-activation/" target="_blank" style="padding:10px 20px; background-color:#0000FF; color:white; text-decoration:none; border-radius:5px;">Get Started With Ccleaner</a></center>
+<br/>
 
-            <h3>1. 🔎 Go to the Official Dashlane Login Page</h3>
-            <p>Head to <strong>dashlane.com login</strong> or open the Dashlane application on your device. If you’re asking, <em>“Where is my Dashlane account?”</em> — this is where you’ll find it.</p>
+<p>
+This comprehensive guide will walk you through the entire process of downloading, installing, and activating CCleaner Pro using
+a valid license key. Whether you are a first-time user or upgrading from the free version, this article will help you understand
+each step clearly and safely.
+</p>
 
-            <h3>2. 🧩 Enter Your Email Address</h3>
-            <p>Type in the same email address you used when you created your Dashlane account. Many users often wonder, <em>“Find my Dashlane account — how?”</em> Simply using your registered email will locate it.</p>
+<hr>
 
-            <h3>3. 🔒 Input Your Master Password</h3>
-            <p>Your Master Password is the key to unlock your vault. This is a crucial step in <strong>logging into Dashlane manage</strong> or accessing sensitive information.</p>
+<h2>What Is CCleaner Pro?</h2>
 
-            <h3>4. ✅ Verify with 2-Factor Authentication (If Enabled)</h3>
-            <p>If you enabled two-factor authentication (2FA), Dashlane will prompt you to confirm your identity for added security.</p>
+<p>
+CCleaner Pro is the premium edition of CCleaner, developed by Piriform (now part of Avast).
+It is designed to optimize system performance by removing unnecessary files, clearing browser caches,
+managing startup programs, and improving overall system stability.
+</p>
 
-            <h3>5. 🚀 Access and Manage Your Account</h3>
-            <p>Once you <strong>log into my Dashlane account</strong>, you can securely manage your passwords, payment details, and notes.</p>
-        </section>
+<h3>Key Benefits of CCleaner Pro</h3>
+<ul>
+  <li>Automatic and scheduled cleaning</li>
+  <li>Real-time junk file monitoring</li>
+  <li>Automatic software updates</li>
+  <li>Advanced privacy protection</li>
+  <li>Priority technical support</li>
+</ul>
 
-        <section>
-            <h2>🧠 Tips to Stay Secure When You Sign In to Dashlane</h2>
+<p>
+Unlike unofficial or modified versions, using CCleaner Pro with a legitimate license key ensures you receive updates,
+security patches, and official customer support.
+</p>
 
-            <h3>🔐 1. Keep Your Master Password Private</h3>
-            <p>Never share your Master Password, even with <strong>Dashlane customer support</strong>. They will never ask for it.</p>
+<hr>
 
-            <h3>🧭 2. Always Use the Official Dashlane Log In Page</h3>
-            <p>Avoid phishing scams by logging in only via the official <strong>dashlane.com login</strong> or <strong>Dashlane log in page UK</strong>.</p>
+<h2>System Requirements for CCleaner Pro</h2>
 
-            <h3>🔄 3. Enable “Stay Logged In” Carefully</h3>
-            <p>Dashlane offers a <strong>Dashlane stay logged in</strong> option for convenience. However, only enable it on private devices to prevent unauthorized access.</p>
+<p>
+Before downloading CCleaner Pro, make sure your system meets the minimum requirements.
+</p>
 
-            <h3>🧰 4. Update Your App Regularly</h3>
-            <p>Keeping Dashlane updated ensures that security patches and features are always current.</p>
-        </section>
+<h3>Windows Requirements</h3>
+<ul>
+  <li>Windows 11, 10, 8.1, or 7 (32-bit or 64-bit)</li>
+  <li>At least 512 MB RAM</li>
+  <li>50 MB free disk space</li>
+  <li>Internet connection for activation and updates</li>
+</ul>
 
-        <section>
-            <h2>🧑‍💻 How to Fix Login Issues with Dashlane</h2>
-            <p>If you <strong>need to sign into Dashlane</strong> but encounter errors, here are a few things to check:</p>
-            <ul>
-                <li>🕵️ <strong>Incorrect Credentials:</strong> Make sure you’re using the correct email and Master Password.</li>
-                <li>🔄 <strong>Sync Problems:</strong> Restart your device or refresh the browser before attempting to <strong>log in to Dashlane</strong> again.</li>
-                <li>🧱 <strong>Two-Factor Errors:</strong> If 2FA fails, verify your authentication app settings.</li>
-                <li>🆘 <strong>Contact Dashlane Customer Support:</strong> When you can’t access <strong>my Dashlane sign in</strong>, reach out to <strong>Dashlane customer support</strong> for help recovering your account.</li>
-            </ul>
-        </section>
+<p>
+Meeting these requirements ensures that CCleaner Pro runs smoothly on your device.
+</p>
 
-        <section>
-            <h2>🌍 Accessing Your Dashlane Account from Different Locations</h2>
-            <p>If you’re logging in from another region — say, the UK — you can still use the same credentials. The <strong>Dashlane log in page UK</strong> simply redirects you to your account in that region. Whether you’re at home, work, or traveling, it’s easy to <strong>sign in to Dashlane</strong> and continue managing your digital life.</p>
-        </section>
+<hr>
 
-        <section>
-            <h2>🔁 How to Stay Signed In Securely</h2>
-            <p>For frequent users, the <strong>Dashlane stay logged in</strong> option can save time. However, only use this feature on trusted devices. For shared or public systems, always <strong>sign out</strong> after completing your session to prevent unauthorized access.</p>
-        </section>
+<h2>How to Download CCleaner Pro</h2>
 
-        <section>
-            <h2>🧩 Troubleshooting “Where Is My Dashlane Account?”</h2>
-            <p>If you’ve lost track of your credentials or can’t <strong>find my Dashlane account</strong>, here’s what you can do:</p>
-            <ol>
-                <li>🧾 Check your registered email inbox for Dashlane messages.</li>
-                <li>🔍 Search your devices for the Dashlane app and see if your account is synced.</li>
-                <li>🆘 Contact <strong>Dashlane customer support</strong> to verify your registration details.</li>
-            </ol>
-        </section>
+<p>
+Downloading CCleaner Pro from the official source is essential to avoid malware, fake installers,
+or compromised software.
+</p>
 
-        <section>
-            <h2>🏁 Conclusion</h2>
-            <p>Logging into Dashlane is straightforward once you understand the process. Whether you’re accessing it via the <strong>Dashlane log in page</strong>, <strong>dashlane.com login</strong>, or mobile app, always prioritize your account’s security.</p>
-            <p>Next time you think, <em>“I need to log into my Dashlane account”</em> or <em>“How do I manage my Dashlane log in account?”</em>, follow the steps above to ensure a seamless and secure experience.</p>
-            <p>Dashlane’s combination of convenience and protection makes it an essential tool for password management — and with these tips, you can <strong>sign in to Dashlane</strong> confidently, wherever you are.</p>
-        </section>
+<h3>Step-by-Step Download Instructions</h3>
+<ol>
+  <li>Open your preferred web browser.</li>
+  <li>Visit the official CCleaner website.</li>
+  <li>Navigate to the CCleaner Pro product page.</li>
+  <li>Select the appropriate version for your operating system.</li>
+  <li>Click the download button and wait for the installer file to finish downloading.</li>
+</ol>
+
+<p>
+If you already purchased CCleaner Pro, you may also find the download link in your confirmation email or user account dashboard.
+</p>
+
+<hr>
+
+<h2>How to Install CCleaner Pro on Your Computer</h2>
+
+<p>
+Once the installer file is downloaded, the installation process is straightforward and user-friendly.
+</p>
+
+<h3>Installation Steps</h3>
+<ol>
+  <li>Locate the downloaded installer file on your computer.</li>
+  <li>Double-click the file to start the installation process.</li>
+  <li>If prompted by User Account Control, click <strong>Yes</strong>.</li>
+  <li>Choose your preferred language and installation options.</li>
+  <li>Click <strong>Install</strong> and wait for the process to complete.</li>
+</ol>
+
+<p>
+After installation, CCleaner will either launch automatically or can be opened from your desktop or Start menu.
+</p>
+
+<hr>
+
+<h2>Understanding the CCleaner Pro License Key</h2>
+
+<p>
+A CCleaner Pro license key is a unique code provided after purchasing the software.
+This key verifies your purchase and unlocks all premium features.
+</p>
+
+<h3>Where to Find Your License Key</h3>
+<ul>
+  <li>Purchase confirmation email</li>
+  <li>Your CCleaner or Avast account dashboard</li>
+  <li>Retail purchase card or receipt (if applicable)</li>
+</ul>
+
+<p>
+Always keep your license key safe and avoid sharing it publicly, as misuse may lead to deactivation.
+</p>
+
+<hr>
+
+<h2>How to Activate CCleaner Pro with a License Key</h2>
+
+<p>
+Activating CCleaner Pro is a simple process that can be completed in just a few steps.
+</p>
+
+<h3>Activation Steps</h3>
+<ol>
+  <li>Open CCleaner on your computer.</li>
+  <li>Click on the <strong>Upgrade</strong> or <strong>License</strong> option in the interface.</li>
+  <li>Select <strong>Enter License Key</strong>.</li>
+  <li>Carefully paste or type your license key and registered email address.</li>
+  <li>Click <strong>Activate</strong>.</li>
+</ol>
+
+<p>
+Once activated successfully, CCleaner will confirm that Pro features are enabled.
+</p>
+
+<hr>
+
+<h2>How to Verify That CCleaner Pro Is Activated</h2>
+
+<p>
+After activation, it is important to confirm that your software is running in Pro mode.
+</p>
+
+<h3>Verification Methods</h3>
+<ul>
+  <li>Check the license status in the CCleaner settings menu</li>
+  <li>Look for “CCleaner Pro” displayed in the application title</li>
+  <li>Access Pro-only features such as real-time monitoring</li>
+</ul>
+
+<p>
+If the software still shows the free version, restarting CCleaner or your computer may resolve the issue.
+</p>
+
+<hr>
+
+<h2>Using CCleaner Pro Effectively</h2>
+
+<p>
+Once activated, CCleaner Pro offers powerful tools to keep your system optimized.
+</p>
+
+<h3>Recommended Features to Use</h3>
+<ul>
+  <li>Enable scheduled cleaning for automatic maintenance</li>
+  <li>Turn on real-time junk file monitoring</li>
+  <li>Use the software updater to keep applications current</li>
+  <li>Clean browser history and tracking cookies for privacy</li>
+</ul>
+
+<p>
+Using these features regularly helps maintain performance and system health.
+</p>
+
+<hr>
+
+<h2>Troubleshooting Activation Issues</h2>
+
+<p>
+In some cases, users may encounter issues while activating CCleaner Pro.
+</p>
+
+<h3>Common Problems and Solutions</h3>
+<ul>
+  <li><strong>Invalid license key:</strong> Double-check for typing errors.</li>
+  <li><strong>No internet connection:</strong> Ensure you are connected during activation.</li>
+  <li><strong>Expired license:</strong> Verify your subscription status.</li>
+  <li><strong>Already used key:</strong> Contact official support for assistance.</li>
+</ul>
+
+<p>
+If issues persist, contacting CCleaner customer support is the safest and most reliable solution.
+</p>
+
+<hr>
+
+    <br/>
+<center><a href="https://mystartpage.click/my-ccleaner-activation/" target="_blank" style="padding:10px 20px; background-color:#0000FF; color:white; text-decoration:none; border-radius:5px;">Get Started With Ccleaner</a></center>
+<br/>
+
+<h2>Frequently Asked Questions (FAQ)</h2>
+
+<h3>Is CCleaner Pro worth upgrading from the free version?</h3>
+<p>
+Yes, CCleaner Pro offers automation, enhanced security, and convenience features not available in the free version.
+</p>
+
+<h3>Can I use one license key on multiple computers?</h3>
+<p>
+This depends on your subscription plan. Some licenses allow multiple devices, while others are single-device only.
+</p>
+
+<h3>What happens if my CCleaner Pro subscription expires?</h3>
+<p>
+When your subscription expires, CCleaner will revert to the free version unless you renew your license.
+</p>
+
+<h3>Is it safe to buy CCleaner Pro online?</h3>
+<p>
+Purchasing CCleaner Pro from the official website or authorized sellers is safe and secure.
+</p>
+
+<h3>Can I reinstall CCleaner Pro after formatting my computer?</h3>
+<p>
+Yes, you can reinstall CCleaner Pro and reactivate it using the same license key, as long as it complies with the license terms.
+</p>
+
+<hr>
+
+<h2>Conclusion</h2>
+
+<p>
+Downloading, installing, and activating CCleaner Pro with a valid license key is a simple and secure process
+when done through official channels. By following the steps outlined in this guide, you can unlock all premium
+features and keep your computer running efficiently.
+</p>
+
+<p>
+Always use a legitimate license key to ensure security, updates, and reliable support.
+With CCleaner Pro properly activated, maintaining your system becomes easier, faster, and more effective.
+</p>
     
   </div>
 
